OC  = OpenCart (alle ondersteunde versies)
OC1 = OpenCart 1
OC2 = OpenCart 2 (OC21, OC22, OC23 = specifieke minor versie binnen major versie 2)
OC3 = OpenCart 3
PS  = PrestaShop
VM3 = VirtueMart3 (Joomla)
WC  = WooCommerce (WordPress) (alle ondersteunde versies)
WC2 = WooCommerce 2 (WordPress)
WC3 = WooCommerce 3 (WordPress)


5.3.0 (2018-03-??)
------------------
- ALL: Controls op Batchscherm aangepast: radio buttons voor verzendwijzen en
  een aparte checkbox voor dry-run.
- ALL: Methods Form::getDateFormat() en Form::geShopDateFormat() zijn
  verwijderd. Die shops die nog geen html5 input type=date gebruiken, krijgen
  een (html5 attribuut) placeholder met het verwachte formaat dat
  gestandaardiseerd is op wat een date field verstuurt (yyyy-mm-dd).
- Refactor: centralise date formats.

5.2.2 (2018-03-16)
------------------
- ALL: security review: better code and document security measures taken. Some
  additional escaping was added, mostly input coming from the Acumulus API, so
  no real security risks were discovered.
- WC: 2e versie van de "dashboard" functionaliteit.
- ALL: Moved order/credit note related getting methods from Creator to Source.
- ALL: Replace FormRenderer::setUsePopupDescription() with more generic
  FormRenderer:::setProperty().
- All: Allow for label and label wrapper specific attributes in form fields.
- All: Notice: Undefined index: vatrate in Completor.php on line 989.

5.2.1 (2018-03-05)
------------------
- WC: Toon status van de boeking in Acumulus in het admnin shop order formulier.
  dit is de eerste versie van de "dashboard" functionaliteit.
- ALL: voeg een berichttype "opmerking" toe zodat de melding over het
  overschrijven van een bestaande factuur er minder ernstig uitziet.
- ALL: Add Source::getRefunds() and rename Source::getOriginalInvoiceSource to
  Source::getOrder().
- ALL: Form rendering: Allow to use shop specific help texts, often in a hover
  popup.
- Error in Container::getAcumulusEntry().