@@ -20,6 +20,7 @@ WC3 = WooCommerce 3 (WordPress)
 
 5.3.0 (2018-03-??)
 ------------------
+- ALL: Do not render the for attribute with a label for a markup element.
 - ALL: Controls op Batchscherm aangepast: radio buttons voor verzendwijzen en
   een aparte checkbox voor dry-run.
 - ALL: Methods Form::getDateFormat() en Form::geShopDateFormat() zijn
